fix: general fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
         "target": "es2019",
         "noImplicitAny": true,
         "moduleResolution": "node",
-        "sourceMap": true,
-        "outDir": "dist/src",
+        "sourceMap": false,
+        "outDir": "./dist/src",
         "resolveJsonModule": true,
         "allowJs": true,
         "baseUrl": "./",
