--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "2.6.9",
     "node-mocks-http": "^1.12.2",
     "save-dev": "^0.0.1-security",
     "swagger-jsdoc": "6.2.8",
