--- a/.eslintrc
+++ b/.eslintrc
@@ -56,13 +56,14 @@
         "mocha/no-pending-tests": "off",
         "mocha/no-exports": "warn",
         "mocha/no-setup-in-describe": "off",
-        "@typescript-eslint/no-misused-promises": "warn",
+        "@typescript-eslint/no-misused-promises": "off",
         "@typescript-eslint/no-empty-interface": "warn",
         "@typescript-eslint/no-unsafe-assignment": "warn",
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/no-unsafe-argument": "warn",
         "@typescript-eslint/no-unsafe-call": "warn",
-        "@typescript-eslint/ban-ts-comment": "off"
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-unsafe-return": "off"
     }
 }
