--- a/.eslintrc
+++ b/.eslintrc
@@ -64,6 +64,7 @@
         "@typescript-eslint/no-unsafe-argument": "warn",
         "@typescript-eslint/no-unsafe-call": "warn",
         "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/no-unsafe-return": "off"
+        "@typescript-eslint/no-unsafe-return": "off",
+        "@typescript-eslint/no-unsafe-member-access": "off"
     }
 }
