--- a/package.json
+++ b/package.json
@@ -41,48 +41,47 @@
   },
   "homepage": "https://gitlab.indec.gob.ar/dev/ipc/ipc-auth#readme",
   "devDependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.5",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/ioredis": "^4.28.10",
     "@types/mocha": "^10.0.1",
-    "@types/morgan": "^1.9.4",
-    "@types/node-fetch": "^2.6.3",
+    "@types/morgan": "^1.9.5",
+    "@types/node-fetch": "2.6.4",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "chai": "^4.3.7",
-    "chai-http": "^4.3.0",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "chai": "^4.3.8",
+    "chai-http": "^4.4.0",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^14.0.1",
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "nyc": "^15.1.0",
     "organize-imports-cli": "^0.10.0",
     "plop": "^3.1.2",
-    "prettier": "^2.8.8"
+    "prettier": "^3.0.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "node-fetch": "2.6.9",
-    "node-mocks-http": "^1.12.2",
+    "node-fetch": "2.7.0",
     "save-dev": "^0.0.1-security",
     "swagger-jsdoc": "6.2.8",
-    "swagger-ui-express": "4.6.3",
+    "swagger-ui-express": "5.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "winston": "^3.8.2"
+    "typescript": "^5.2.2",
+    "winston": "^3.10.0"
   }
 }
