--- a/.eslintrc
+++ b/.eslintrc
@@ -58,11 +58,11 @@
         "mocha/no-setup-in-describe": "off",
         "@typescript-eslint/no-misused-promises": "off",
         "@typescript-eslint/no-empty-interface": "warn",
-        "@typescript-eslint/no-unsafe-assignment": "warn",
+        "@typescript-eslint/no-unsafe-assignment": "off",
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/no-unsafe-argument": "warn",
-        "@typescript-eslint/no-unsafe-call": "warn",
+        "@typescript-eslint/no-unsafe-call": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/no-unsafe-return": "off",
         "@typescript-eslint/no-unsafe-member-access": "off"
