--- a/package.json
+++ b/package.json
@@ -41,47 +41,48 @@
   },
   "homepage": "https://gitlab.indec.gob.ar/dev/ipc/ipc-auth#readme",
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@types/chai": "^4.3.5",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
+    "@types/chai": "^4.3.11",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/ioredis": "^4.28.10",
-    "@types/mocha": "^10.0.1",
-    "@types/morgan": "^1.9.5",
-    "@types/node-fetch": "2.6.4",
-    "@types/swagger-jsdoc": "^6.0.1",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "chai": "^4.3.8",
+    "@types/mocha": "^10.0.6",
+    "@types/morgan": "^1.9.9",
+    "@types/node-fetch": "2.6.9",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "chai": "^4.3.10",
     "chai-http": "^4.4.0",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-mocha": "^10.2.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^15.2.0",
     "mocha": "^10.2.0",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.2",
     "nyc": "^15.1.0",
     "organize-imports-cli": "^0.10.0",
-    "plop": "^3.1.2",
-    "prettier": "^3.0.3"
+    "plop": "^4.0.0",
+    "prettier": "^3.1.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "node-fetch": "2.7.0",
     "save-dev": "^0.0.1-security",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "winston": "^3.10.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "winston": "^3.11.0"
   }
 }
