--- a/.eslintrc
+++ b/.eslintrc
@@ -42,11 +42,7 @@
         "no-console": "error",
         "require-atomic-updates": "off",
         "object-curly-spacing": ["error", "always"],
-        "comma-dangle": ["error", {
-            "arrays": "always-multiline",
-            "objects": "always-multiline",
-            "imports": "always-multiline"
-        }],
+        "comma-dangle": "off",
         "promise/prefer-await-to-then": "warn",
         "promise/always-return": "warn",
         "import/prefer-default-export": "off",
