--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,13 @@
     "compilerOptions": {
         "module": "commonjs",
         "esModuleInterop": true,
-        "target": "es2019",
+        "target": "ES6",
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": false,
         "outDir": "./dist/src",
+        "rootDir": "./src",
+        "skipLibCheck": true,
         "resolveJsonModule": true,
         "allowJs": true,
         "baseUrl": "./",
