--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,7 @@
         "allowJs": true,
         "baseUrl": "./",
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "@/*": ["./src/*"]
         },
         "typeRoots": ["@types", "node_modules/@types"]
     },
